--- a/Projects/IdentityServer/Views/Device/UserCodeConfirmation.cshtml
+++ b/Projects/IdentityServer/Views/Device/UserCodeConfirmation.cshtml
@@ -1,4 +1,4 @@
-@model IdentityServer4.Quickstart.UI.Device.DeviceAuthorizationViewModel
+@model IdentityServer.Quickstart.Device.DeviceAuthorizationViewModel
 
 <div class="page-header">
     <div class="row page-header">
