--- a/Projects/IdentityServer/Views/Shared/_Layout.cshtml
+++ b/Projects/IdentityServer/Views/Shared/_Layout.cshtml
@@ -9,27 +9,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="~/favicon.ico" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="~/">
-                    <span class="navbar-brand">
-                        <img src="~/icon.png" class="icon-banner">
-                        IdentityServer4
-                    </span>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <div class="container body-content">
-        @RenderBody()
-    </div>
+<div>
+    @RenderBody()
+</div>
 </body>
 </html>
